client/src/components/Footer/Footer.css
.footer-container {
  background-color: #343a40;
  color: white;
  padding: 0px;
}

.footer-col {
  text-align: center;
  margin: 10px 0;
}

.footer-rounded {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}
.footer-info {
  color: rgb(225, 220, 220);
}
.footer-link {
  color: white;
  text-decoration: none;
}
.footer-link:hover {
  color: white;
  font-weight: bold;
}

